jenkins/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins    
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      containers:
        - name: jenkins
          image: brainupgrade/jenkins:2.274jdk11x
          securityContext:
            runAsUser: 0          
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "250m"
              memory: "1024Mi"  
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: docker-sock-volume
              mountPath: /var/run/docker.sock              
      volumes:
        - name: jenkins-home
          hostPath:
            path: /var/jenkins_home
        - name: docker-sock-volume
          hostPath:
            path: /var/run/docker.sock
