jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  type: ClusterIP
  selector:
    app: jenkins  
  ports:
  - port: 80
    name: "http"
    targetPort: 8080
  - port: 8080
    name: "ui"
    targetPort: 8080
  - port: 50000
    name: "slave"
    targetPort: 50000
